# sandol-static-info-service

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/config/: config.py
app/routers/: __init__.py  bus.py  organization.py  statics.py
app/utils/: __init__.py  ibookdownloader.py  image_response.py  university_structure.py
